# KeekoGeneralLib

./: CMakeLists.txt
include/: KeekoMessage.h
include/Keeko/: CRC.h
src/: CRC.cpp  KeekoMessage.cpp
